--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,10 +1,10 @@
 !!!
 %html
   %head
-  %title
-    = "Ruby on Rails Tutorial Sample App | #{yield :title}"
+  %title= full_title(yield(:title))
   = stylesheet_link_tag    "application", media: "all"
   = javascript_include_tag "application"
   = csrf_meta_tags
   %body
+    =full_title(yield(:title))
     = yield
